--- a/package.json
+++ b/package.json
@@ -8,50 +8,50 @@
   "dependencies": {
     "async": "1.5.2",
     "bcryptjs": "2.3.0",
-    "body-parser": "1.17.1",
+    "body-parser": "^1.18.2",
     "bytes": "^2.2.0",
     "colors": "1.1.2",
     "compression": "1.7.0",
     "connect-busboy": "0.0.2",
-    "connect-redis": "3.0.2",
+    "connect-redis": "^3.0.2",
     "cookie-parser": "1.4.1",
     "cors": "2.7.1",
     "csurf": "1.8.3",
     "data2xml": "1.2.4",
-    "ejs-mate": "2.3.0",
+    "ejs-mate": "^3.0.0",
     "eventproxy": "1.0.0",
     "express": "4.16.0",
-    "express-session": "1.12.1",
-    "helmet": "1.3.0",
-    "ioredis": "1.15.1",
+    "express-session": "^1.15.6",
+    "helmet": "^3.8.2",
+    "ioredis": "^2.0.0",
     "jpush-sdk": "3.3.2",
-    "loader-builder": "2.4.1",
     "loader": "2.1.1",
-    "lodash": "4.16.2",
+    "loader-builder": "^2.6.0",
+    "lodash": "^4.17.11",
     "log4js": "^0.6.29",
     "markdown-it": "6.0.0",
     "memory-cache": "0.1.4",
-    "method-override": "2.3.5",
-    "moment": "2.15.2",
+    "method-override": "^2.3.10",
+    "moment": "^2.19.3",
     "mongoose": "5.3.8",
     "multiline": "1.0.2",
     "node-uuid": "1.4.7",
-    "nodemailer": "2.3.0",
+    "nodemailer": "^2.3.2",
     "nodemailer-smtp-transport": "2.4.0",
-    "oneapm": "1.2.20",
+    "oneapm": "^1.2.20",
     "passport": "0.3.2",
     "passport-github": "1.1.0",
-    "pm2": "*",
-    "qn": "1.3.0",
+    "pm2": "^3.5.1",
+    "qn": "^1.3.0",
     "ready": "0.1.1",
-    "request": "2.81.0",
+    "request": "^2.82.0",
     "response-time": "2.3.1",
-    "superagent": "2.0.0",
+    "snyk": "^1.171.1",
+    "superagent": "^3.8.1",
     "utility": "1.6.0",
     "validator": "5.1.0",
-    "xmlbuilder": "7.0.0",
-    "xss": "0.2.10",
-    "snyk": "^1.88.0"
+    "xmlbuilder": "^7.0.0",
+    "xss": "0.2.10"
   },
   "devDependencies": {
     "errorhandler": "1.4.3",
@@ -65,7 +65,7 @@
     "supertest": "1.2.0"
   },
   "scripts": {
-    "test": "make test",
+    "test": "snyk test && make test",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
   },
